@@ -327,15 +327,17 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(Symbol symbol, String value, int line) {
-//		System.out.println("TODO Symbol() " + value);
+		System.out.println("TODO Symbol() " + value);
 		classBytecodeWriter.callPrimitiveSymbol(value, line);
 		if (insideArray())
 			classBytecodeWriter.callPrimitivePutAt(symbol.index(), line);
 	}
 
 	public void visit(Array array) {
-		arrayDepth++;
 		classBytecodeWriter.callPrimitiveArray(array.size(), array.line());
+		if (insideArray())
+			classBytecodeWriter.callPrimitivePutAt(array.index(), array.line());
+		arrayDepth++;
 	}
 
 	public void visitEnd(Array array) {
