@@ -1,3 +1,7 @@
+19/12/2011
+
+Changes to array handling as part of issue logged against isKindOf: 
+
 18/12/2011
 
 Added to list of classes and protocols.
